# treasure-island

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
AegeanTools/: BANE_fft.py
doc/: conf.py
tests/integration/: test_script_AeReg.py  test_script_AeRes.py  test_script_BANE.py  test_script_MIMAS.py  test_script_SR6.py  test_script_aegean.py
tests/unit/: make_test_data.py  test_AeRes.py  test_BANE.py  test_MIMAS.py  test_angle_tools.py  test_bane_fft.py  test_catalogs.py  test_cluster.py  test_exceptions.py  test_fits_tools.py  test_fitting.py  test_misc.py  test_models.py  test_msq2.py  test_regions.py  test_source_finder.py
treasure_island/: BANE.py  BANE_fft.py  MIMAS.py  __init__.py  catalogs.py  cluster.py  fits_tools.py  fitting.py  numba_polyfit.py  source_finder.py  wcs_helpers.py
treasure_island/CLI/: AeReg.py  AeRes.py  BANE.py  MIMAS.py  SR6.py  aegean.py
